# obs-camera-controls

./: .gitignore  CMakeLists.txt  SESSION_NOTES.md  atem-control.cpp  atem-control.h  buildspec.json  easing.c  easing.h  install-admin.ps1  shot-presets-dock.cpp  shot-presets-dock.hpp  shot-presets-filter.c  shot-presets-shared.h  shot-presets.lua
data/locale/: en-US.ini
src/: easing.c  easing.h  plugin-main.c  shot-presets-filter.c  shot-presets-filter.h
